refactor: jwt auth converter get resources