@@ -21,12 +21,16 @@ import java.util.stream.Stream;
 @Slf4j
 public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationToken> {
 
+    private static final String RESOURCE_ACCESS_CLAIM = "resource_access";
+    private static final String ROLES_CLAIM = "roles";
+
     private final JwtGrantedAuthoritiesConverter jwtGrantedAuthoritiesConverter =
             new JwtGrantedAuthoritiesConverter();
 
-    @Value("${jwt.auth.converter.principle-attribute}")
+    @Value("${jwt.auth.converter.principle-attribute:}")
     private String principleAttribute;
-    @Value("${jwt.auth.converter.resource-id}")
+
+    @Value("${jwt.auth.converter.resource-id:}")
     private String resourceId;
 
     @Override
@@ -36,43 +40,31 @@ public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationTo
                 extractResourceRoles(jwt).stream()
         ).collect(Collectors.toSet());
 
-        return new JwtAuthenticationToken(
-                jwt,
-                authorities,
-                getPrincipleClaimName(jwt)
-        );
+        return new JwtAuthenticationToken(jwt, authorities, getPrincipleClaimName(jwt));
     }
 
     private String getPrincipleClaimName(Jwt jwt) {
         String claimName = JwtClaimNames.SUB;
-        if (principleAttribute != null) {
+        if (principleAttribute != null && !principleAttribute.isEmpty()) {
             claimName = principleAttribute;
         }
         return jwt.getClaim(claimName);
     }
 
+    @SuppressWarnings("unchecked")
     private Collection<? extends GrantedAuthority> extractResourceRoles(Jwt jwt) {
-        Map<String, Object> resourceAccess;
-        Map<String, Object> resource;
-        Collection<String> resourceRoles;
+        Map<String, Object> resourceAccess = jwt.getClaim(RESOURCE_ACCESS_CLAIM);
+        if (resourceAccess == null) return Collections.emptySet();
 
-        if (jwt.getClaim("resource_access") == null) {
-            return Set.of();
-        }
-        resourceAccess = jwt.getClaim("resource_access");
+        Map<String, Object> resource = (Map<String, Object>) resourceAccess.get(resourceId);
+        if (resource == null) return Collections.emptySet();
 
-        if (resourceAccess.get(resourceId) == null) {
-            return Set.of();
-        }
-        resource = (Map<String, Object>) resourceAccess.get(resourceId);
-        resourceRoles = (Collection<String>) resource.get("roles");
-
-        log.info(String.format("\nResource: %s\n", resource));
-        log.info(String.format("\nResource Roles: %s\n", resourceRoles));
+        Collection<String> resourceRoles = (Collection<String>) resource.get(ROLES_CLAIM);
+        if (resourceRoles == null) return Collections.emptySet();
 
         return resourceRoles
                 .stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .map(role -> new SimpleGrantedAuthority(String.format("ROLE_%s", role)))
                 .collect(Collectors.toSet());
     }
 }
